# dh-agent-workshop

./: .gitignore  Readme.md  requirements.txt
WorkshopAgent/: agent.py  requirements.txt  utils.py
WorkshopAgent/subagents/: mcp_agent.py  search_agent.py
deployment/: deploy_agent.py  deploy_agent_engine.sh
mcp/: Dockerfile  main.py  pyproject.toml  status_mcp.py
